# NativeImage

./: .gitignore  CMakeLists.txt  README.md  main.cpp
android/: .gitignore  Android.mk  Application.mk  build.cmd  build.sh
java/: jni_md.h
json11/: CMakeLists.txt
src/: CMakeLists.txt  Debug.cpp  Debug.h  Effect.cpp  Effect.h  Errors.h  Image.cpp  Image.h  Image.hpp  ImageMetaData.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessor.hpp  JNIHelper.cpp  JNIHelper.h  JNI_JpegImage.cpp  JNI_JpegImage.h  JNI_NativeImage.cpp  JNI_NativeImage.h  JPEGImage.cpp  JPEGImage.hpp  JpegImageProcessor.cpp  JpegImageProcessor.h  LogHelper.h  PNGImage.cpp  PNGImage.hpp  PNGImageProcessor.cpp  PNGImageProcessor.hpp  SimpleClass.cpp  SimpleClass.h  Types.h
src/fakers/: AndroidBitmap.h
test/: Assets.h  CMakeLists.txt  EffectTest.cpp  ImageJPEG3Test.cpp  ImageJPEG4Test.cpp  ImagePNGTest.cpp  ImageProcessorTest.cpp  ImageTest.cpp  JPEGImage3Test.cpp  JPEGImage4Test.cpp  JPEGImageTest.cpp  PNGImageTest.cpp  PNGProcessorTest.cpp  TestHelper.h
test/sample/: _sample.cpp
